简述：优化图片选择器
背景信息：

修改内容：

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,7 +53,7 @@
         </provider>
 
         <activity
-            android:name=".AlbumActivity"
+            android:name=".camera.AlbumActivity"
             android:screenOrientation="portrait"/>
     </application>
 
